--- a/index.html
+++ b/index.html
@@ -6,29 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Match Game</title>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type ="text/css" href="style.css">
 </head>
 <body>
+    <h1>Matching Game</h1>
     <div id="container">
-        <h1>Matching Game</h1>
-        <div id="images">
-            <img id="image1" src="" alt="card">
-            <img id="image2" src="" alt="card">
-            <img id="image3" src="" alt="card">
-            <img id="image4" src="" alt="card">
-            <img id="image5" src="" alt="card">
-            <img id="image6" src="" alt="card">
-            <img id="image7" src="" alt="card">
-            <img id="image8" src="" alt="card">
-            <img id="image9" src="" alt="card">
-            <img id="image10" src="" alt="card">
-            <img id="image11" src="" alt="card">
-            <img id="image12" src="" alt="card">
-            <img id="image13" src="" alt="card">
-            <img id="image14" src="" alt="card">
-            <img id="image15" src="" alt="card">
-            <img id="image16" src="" alt="card">
-        </div>
+    <div id="images">
+        <img id="image1" src="cards/  (1).webp" alt="card">
+        <img id="image2" src="cards/  (2).webp" alt="card">
+        <img id="image3" src="cards/  (3).webp" alt="card">
+        <img id="image4" src="cards/  (4).webp" alt="card">
+        <img id="image5" src="cards/  (5).webp" alt="card">
+        <img id="image6" src="cards/  (6).webp" alt="card">
+        <img id="image7" src="cards/  (7).webp" alt="card">
+        <img id="image8" src="cards/  (8).webp" alt="card">
+        <img id="image9" src="cards/  (9).webp" alt="card">
+        <img id="image10" src="cards/  (10).webp" alt="card">
+        <img id="image11" src="cards/  (11).webp" alt="card">
+        <img id="image12" src="cards/  (12).webp" alt="card">
+        <img id="image13" src="cards/  (13).webp" alt="card">
+        <img id="image14" src="cards/  (14).webp" alt="card">
+        <img id="image15" src="cards/  (15).webp" alt="card">
+        <img id="image16" src="cards/  (16).webp" alt="card">
     </div>
+    <div class = "actions">
+        <button onClick="reset()">Reset</button>
 </body>
 </html>
