--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Match Game</title>
-    <script src="script.js"></script>
     <link rel="stylesheet" type ="text/css" href="style.css">
 </head>
 <body>
     <h1>Matching Game</h1>
     <div id="container">
     <div id="images">
-        <img id="image1" src="cards/  (1).webp" alt="card">
-        <img id="image2" src="cards/  (2).webp" alt="card">
-        <img id="image3" src="cards/  (3).webp" alt="card">
-        <img id="image4" src="cards/  (4).webp" alt="card">
-        <img id="image5" src="cards/  (5).webp" alt="card">
-        <img id="image6" src="cards/  (6).webp" alt="card">
-        <img id="image7" src="cards/  (7).webp" alt="card">
-        <img id="image8" src="cards/  (8).webp" alt="card">
-        <img id="image9" src="cards/  (9).webp" alt="card">
-        <img id="image10" src="cards/  (10).webp" alt="card">
-        <img id="image11" src="cards/  (11).webp" alt="card">
-        <img id="image12" src="cards/  (12).webp" alt="card">
-        <img id="image13" src="cards/  (13).webp" alt="card">
-        <img id="image14" src="cards/  (14).webp" alt="card">
-        <img id="image15" src="cards/  (15).webp" alt="card">
-        <img id="image16" src="cards/  (16).webp" alt="card">
+        <img id="image1" src="mystery.png" alt="card">
+        <img id="image2" src="mystery.png" alt="card">
+        <img id="image3" src="mystery.png" alt="card">
+        <img id="image4" src="mystery.png" alt="card">
+        <img id="image5" src="mystery.png" alt="card">
+        <img id="image6" src="mystery.png" alt="card">
+        <img id="image7" src="mystery.png" alt="card">
+        <img id="image8" src="mystery.png" alt="card">
+        <img id="image9" src="mystery.png" alt="card">
+        <img id="image10" src="mystery.png" alt="card">
+        <img id="image11" src="mystery.png" alt="card">
+        <img id="image12" src="mystery.png" alt="card">
+        <img id="image13" src="mystery.png" alt="card">
+        <img id="image14" src="mystery.png" alt="card">
+        <img id="image15" src="mystery.png" alt="card">
+        <img id="image16" src="mystery.png" alt="card">
     </div>
-    <div class = "actions">
-        <button onClick="reset()">Reset</button>
+    <form class = "actions">
+        <input type="button" id="reset" value="Reset"></input>
+    </form>
+    <script src="script.js"></script>
 </body>
 </html>
