--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
 </head>
 <body>
     <h1>Matching Game</h1>
-    <div id="container">
-    <div id="images">
-        <img id="image1" src="mystery.png" alt="card">
-        <img id="image2" src="mystery.png" alt="card">
-        <img id="image3" src="mystery.png" alt="card">
-        <img id="image4" src="mystery.png" alt="card">
-        <img id="image5" src="mystery.png" alt="card">
-        <img id="image6" src="mystery.png" alt="card">
-        <img id="image7" src="mystery.png" alt="card">
-        <img id="image8" src="mystery.png" alt="card">
-        <img id="image9" src="mystery.png" alt="card">
-        <img id="image10" src="mystery.png" alt="card">
-        <img id="image11" src="mystery.png" alt="card">
-        <img id="image12" src="mystery.png" alt="card">
-        <img id="image13" src="mystery.png" alt="card">
-        <img id="image14" src="mystery.png" alt="card">
-        <img id="image15" src="mystery.png" alt="card">
-        <img id="image16" src="mystery.png" alt="card">
+    <div id="scoreboard">
+        <h2 id="score">Score: </h2>
     </div>
-    <form class = "actions">
-        <input type="button" id="reset" value="Reset"></input>
-    </form>
+    <div id="container">
+        <div id="images">
+            <img id="image1" src="mystery.png" alt="card">
+            <img id="image2" src="mystery.png" alt="card">
+            <img id="image3" src="mystery.png" alt="card">
+            <img id="image4" src="mystery.png" alt="card">
+            <img id="image5" src="mystery.png" alt="card">
+            <img id="image6" src="mystery.png" alt="card">
+            <img id="image7" src="mystery.png" alt="card">
+            <img id="image8" src="mystery.png" alt="card">
+            <img id="image9" src="mystery.png" alt="card">
+            <img id="image10" src="mystery.png" alt="card">
+            <img id="image11" src="mystery.png" alt="card">
+            <img id="image12" src="mystery.png" alt="card">
+            <img id="image13" src="mystery.png" alt="card">
+            <img id="image14" src="mystery.png" alt="card">
+            <img id="image15" src="mystery.png" alt="card">
+            <img id="image16" src="mystery.png" alt="card">
+        </div>
+    </div>
+    <button id="refreshButton">Reset</button>
     <script src="script.js"></script>
 </body>
 </html>
